# ai-shot-cutter

./: .gitignore  KNOWLEDGE_GRAPH.md  README.md  agents.md  how.md  install.bat  install.sh  main.py  plan.md  pyproject.toml  requirements.txt  run.bat  run.sh  spec.md
.claude/: settings.local.json
core/: __init__.py  downloader.py  extractor.py  models.py  pipeline.py  tools.py  vision.py
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
i18n/: en_US.json  zh_TW.json
tests/: test_downloader.py  test_extractor.py  test_gui_smoke.py  test_pipeline.py  test_tools.py  test_vision.py
ui/: frame_card.py  gallery_widget.py  input_panel.py  log_panel.py  main_window.py  prompt_panel.py  settings_panel.py  styles.qss  styles_light.qss  toast.py  tools_panel.py  zoom_viewer.py
utils/: file_utils.py  i18n.py  prompt_history.py  settings.py
workers/: pipeline_worker.py
