[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-shot-cutter"
version = "1.3.0"
description = "YouTube AI Frame Prompt Generator"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "yt-dlp>=2024.1.0",
    "openai>=1.30.0",
    "tqdm>=4.66.0",
]

[project.scripts]
ai-shot-cutter = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "ui*", "utils*", "workers*"]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py311"
